<resources>

    <string-array name="days">
        <item>MTh</item>
        <item>TuF</item>
        <item>Wed</item>
    </string-array>
    <string name="app_name">ClassAttendance</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="confirm">Confirm</string>
    <string name="student_id">Student ID</string>
    <string name="firstname">Firstname</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="lastname">Lastname</string>
    <string name="login">Login</string>
    <string name="cmu_ac_th">\@cmu.ac.th</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_example">Sign in</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="student_login">Student Login</string>
    <string name="lecturer_login">Lecturer Login</string>
    <string name="name">Name</string>
    <string name="forlecturer">forLecturer</string>
    <string name="title">TITLE</string>
    <string name="section">SECTION</string>
    <string name="day">DAY</string>
    <string name="time">TIME</string>
    <string name="status">STATUS</string>
    <string name="add_button">ADD</string>
    <string name="update">UPDATE</string>
    <string name="show_online">Show Online</string>
    <string name="delete">DELETE</string>
    <string name="check">CHECK</string>
    <string name="attendance_detail">ATTENDANCE DETAIL</string>
    <string name="add_course">ADD COURSE</string>
</resources>
