<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/stuIDText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/preinfotext"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/student_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stuIDView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="@+id/stuIDText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stuIDText"
        app:layout_constraintTop_toTopOf="@+id/stuIDText" />

    <TextView
        android:id="@+id/fullnameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/preinfotext"
        android:gravity="end"
        android:text="@string/name"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="@+id/stuIDText"
        app:layout_constraintStart_toStartOf="@+id/stuIDText"
        app:layout_constraintTop_toBottomOf="@+id/stuIDText" />

    <TextView
        android:id="@+id/fullnameView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintBottom_toBottomOf="@+id/fullnameText"
        app:layout_constraintEnd_toEndOf="@+id/stuIDView"
        app:layout_constraintStart_toEndOf="@+id/fullnameText"
        app:layout_constraintTop_toTopOf="@+id/fullnameText" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_course"
        android:background="@drawable/stident_id"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullnameView" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_button" />


</android.support.constraint.ConstraintLayout>